tests/snapshots/file@comments@line_at_eof.lox.snap
---
source: tests/common/mod.rs
description: "print \"ok\"; // expect: ok\n// comment"
input_file: crafting_interpreters_test_files/comments/line_at_eof.lox
---
OUT: 
ok

===
ERR:
