tests/snapshots/file@comments@only_line_comment.lox.snap
---
source: tests/common/mod.rs
description: // comment
input_file: test_files/comments/only_line_comment.lox
---
OUT: 

===
ERR:
