tests/snapshots/file@empty_file.lox.snap
---
source: tests/common/mod.rs
description: ""
input_file: test_files/empty_file.lox
---
OUT: 

===
ERR:
