tests/snapshots/file@field@undefined.lox.snap
---
source: tests/common/mod.rs
description: "class Foo {}\nvar foo = Foo();\n\nfoo.bar; // expect runtime error: Undefined property 'bar'.\n"
input_file: crafting_interpreters_test_files/field/undefined.lox
---
OUT: 

===
ERR: 
  × undefined property `bar`
   ╭─[4:5]
 3 │ 
 4 │ foo.bar; // expect runtime error: Undefined property 'bar'.
   ·     ─┬─
   ·      ╰── here
   ╰────
